# luxmodbus

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  codecov.yml  noxfile.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: coverage.yaml  release.yaml  test.yaml
docs/: capturing-packets.md  discovered-registers.md
scripts/: analyze_capture.py
src/luxmodbus/: __init__.py  discovery.py  protocol.py  registers.py  transport.py
tests/: test_discovery.py  test_protocol.py  test_protocol_stream.py  test_registers.py  test_transport.py
tests/fixtures/: README.md
