[project]
name = "luxmodbus"
version = "0.2.0"
description = "Framing, register map, and discovery for the LuxPower inverter Modbus protocol (HA-free)."
authors = [
    { name = "Steven Marks", email = "marksie1988@users.noreply.github.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["luxpower", "modbus", "inverter", "solar", "home-assistant", "lumen"]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
homepage = "https://github.com/totaldebug/luxmodbus"
repository = "https://github.com/totaldebug/luxmodbus"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "interrogate>=1.5.0",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0.0",
    "nox>=2024.4.15",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "luxmodbus"
module-root = "src"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["luxmodbus"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "luxmodbus.*"
disallow_untyped_defs = true

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 100
exclude = ["build", ".devcontainer", ".nox", ".cache", "tests"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
color = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
